--- a/services/product/config/config.yaml
+++ b/services/product/config/config.yaml
@@ -26,3 +26,5 @@ jwt:
   TOKEN_HOUR_LIFESPAN: ${JWT_TOKEN_HOUR_LIFESPAN:1}
   JWT_EXPIRATION: "${JWT_EXPIRATION:1h}"
   API_SECRET: "${JWT_API_SECRET:xxx.yyy.zzz}"
+grpc:
+  inventory_grpc_server: "${INVENTORY_GRPC_SERVER:localhost:50051}"
