--- a/services/inventory/k8s/compose-deployment.yaml
+++ b/services/inventory/k8s/compose-deployment.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
         - name: inventory-app
-          image: 442426869743.dkr.ecr.ap-northeast-1.amazonaws.com/go-microservice/inventory:latest
-          imagePullPolicy: IfNotPresent
+          image: 442426869743.dkr.ecr.ap-northeast-1.amazonaws.com/go-microservice/inventory1:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
               name: http
@@ -28,15 +28,15 @@ spec:
             - name: SERVICE_NAME
               value: "inventory-service"
             - name: MYSQL_HOST
-              value: "mysql"
+              value: "mysql-instance.cbkki0ck69b6.ap-northeast-1.rds.amazonaws.com"
             - name: MYSQL_PORT
               value: "3306"
             - name: MYSQL_USERNAME
-              value: "root"
+              value: "admin"
             - name: MYSQL_PASSWORD
-              value: "password"
+              value: "root1234"
             - name: MYSQL_DBNAME
-              value: "product"
+              value: "mydb"
             - name: REDIS_HOST
               value: "root"
             - name: REDIS_PORT
@@ -64,8 +64,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 8080
-      targetPort: 80
+    - port: 80
+      targetPort: 8080
       protocol: TCP
       name: http
     - port: 9090
@@ -73,65 +73,29 @@ spec:
       protocol: TCP
       name: grpc
   selector:
-    app.kubernetes.io/name: inventory-app
+    app: inventory-app
 ---
 # Ingress resource using the AWS ALB Ingress Controller
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: go-microservice-ingress
-  annotations:
-    # Required: Specify the AWS Load Balancer Controller as the ingress.class
-    kubernetes.io/ingress.class: alb
-
-    # ALB Scheme: 'internet-facing' for public access, 'internal' for VPC-only access
-    alb.ingress.kubernetes.io/scheme: internet-facing
-
-    # Target Type: 'ip' is recommended for EKS to target individual pod IPs
-    alb.ingress.kubernetes.io/target-type: ip
-
-    # Listener Ports: Define the ports the ALB should listen on
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
-
-    # Optional: Redirect HTTP traffic to HTTPS
-    alb.ingress.kubernetes.io/ssl-redirect: '443'
-
-    # Optional: Health Check Configuration
-    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
-    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
-    alb.ingress.kubernetes.io/healthcheck-path: /health
-    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
-    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
-    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
-    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
-
-    # Optional: Tagging
-    alb.ingress.kubernetes.io/tags: "Environment=dev,Team=platform,Application=golang-app"
-
-    # Uncomment and replace with your certificate ARN for HTTPS
-    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:region:account-id:certificate/certificate-id
-
-    # Optional: Specify security groups (if not using the one from Terraform)
-    # alb.ingress.kubernetes.io/security-groups: sg-xxxxxxxxxx
-
-spec:
-  rules:
-    - http:
-        paths:
-          - path: /product*
-            pathType: Prefix
-            backend:
-              service:
-                name: product-service
-                port:
-                  number: 80
-          - path: /inventory*
-            pathType: Prefix
-            backend:
-              service:
-                name: inventory-service
-                port:
-                  number: 80
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: go-microservice-ingress
+#  annotations:
+#    alb.ingress.kubernetes.io/scheme: internet-facing
+#    alb.ingress.kubernetes.io/target-type: ip
+#spec:
+#  ingressClassName: alb
+#  rules:
+#    - host: go.microservice.com
+#      http:
+#        paths:
+#          - path: "/api/inventory/v0"
+#            pathType: Prefix
+#            backend:
+#              service:
+#                name: inventory-service
+#                port:
+#                  number: 80
 
   # Optional: Default backend for requests that don't match any path
   # defaultBackend:
