--- a/iac-terraform/ingress.yaml
+++ b/iac-terraform/ingress.yaml
@@ -1,5 +1,5 @@
 replicaCount: 2
-clusterName: demo
+clusterName: my-eks-cluster
 image:
   repository: public.ecr.aws/eks/aws-load-balancer-controller
   tag: v2.4.2
